--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,7 +19,7 @@
   "Comment1":"What Our",
   "Comment2":"Customer Say",
   "Search":"Search",
-  "Enter_the_Category": "Enter the Category",
+  "Enter_the_Category": "Enter the name of service",
   "Feature": "FEATURE",
   "Listing": "Listing",
   "Searching": "Searching",
